--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,8 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
